Completed Iris Predictor and BMI Calculator

--- a/R Apps/Playing Golf based on Weather App.ipynb
+++ b/R Apps/Playing Golf based on Weather App.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# Define UI\n",
     "ui <- fluidPage(theme = shinytheme(\"united\"),\n",
-    "  headerPanel('Play Golf?'),\n",
+    "  headerPanel('Should you Play Golf?'),\n",
     "  sidebarPanel(\n",
     "    HTML(\"<h3>Input parameters</h3>\"),\n",
     "    selectInput(\"outlook\", \"Outlook:\", \n",
